Window: Make sure clicking iframe when blurred focuses properly (Fixes #227)

--- a/src/client/stylesheets/core.css
+++ b/src/client/stylesheets/core.css
@@ -439,3 +439,7 @@ iframe.IframeApplicationFrame {
   right : 0px;
   bottom : 0px;
 }
+
+application-window[data-focused="false"] iframe {
+  pointer-events : none;
+}
